--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -5,21 +5,27 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  encoding: utf8
+
+  host: localhost
+  port: 5433
+  username: nurassyl
+  password: 12345
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: curking_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: curking_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: curking
